--- a/Condicionales/Ejemplo/index.html
+++ b/Condicionales/Ejemplo/index.html
@@ -16,7 +16,7 @@
     <section class="container mt-5">
         <h1>Ejercicio ejemplo</h1>
         <p>Ejercicio: Identificar si es mayor de edad</p>
-        <button class="btn btn-primary" onclick="identificarMayorEdad()">Identificar</button>
+        <button class="btn btn-secondary" onclick="identificarMayorEdad()">Identificar</button>
     </section>
 
     <script src="script.js"></script>
