--- a/Proyecto_tp/index.html
+++ b/Proyecto_tp/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto de Monitoreo de Plantas</title>
+    <title>Proyecto Wall-E</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <header>
-    <h1>Proyecto de Monitoreo de Plantas con Raspberry Pi</h1>
+    <h1>Proyecto Wall-E</h1>
 </header>
 
 <main>
